MCN Ijoku Live!

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -59,7 +59,7 @@
 
       <h2>Contact</h2>
       <p>Phone: +234 XXX XXX XXXX</p>
-      <p>Email: info@methodistijoku.org</p>
+      <p>Email: info@mcnijoku.org</p>
     </div>
 
     <!-- CONTACT FORM -->
